# pytels_finances_back

./: .gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 905a59783b8c_create_incomes_table.py  af7ccd3a8b84_change_describe_model.py
pytels_finances/: app.py  database.py
pytels_finances/models/: models.py
pytels_finances/schemas/: income_schema.py  outcome_schema.py
